[gd_scene load_steps=5 format=3 uid="uid://cgsp0immour76"]

[ext_resource type="Script" path="res://scripts/game/tutorial.gd" id="1_hpb7a"]
[ext_resource type="Theme" uid="uid://bqf8rudx067vu" path="res://scenes/themes/window_text.tres" id="2_8riw2"]
[ext_resource type="Texture2D" uid="uid://43y5yxj26w33" path="res://assets/imgs/game sprites/window2.png" id="2_a20la"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rtrdi"]
radius = 10.4403

[node name="tutorial" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hpb7a")

[node name="window" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="window"]
position = Vector2(160, 126)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_a20la")

[node name="Area2D" type="Area2D" parent="window"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="window/Area2D"]
position = Vector2(26, 30)
shape = SubResource("CircleShape2D_rtrdi")

[node name="Label" type="Label" parent="window"]
custom_minimum_size = Vector2(292, 188)
offset_left = 13.0
offset_top = 47.0
offset_right = 305.0
offset_bottom = 231.0
theme = ExtResource("2_8riw2")
text = "> Select a file by clicking it to investigate for any viruses
	
	<esc> to skip
	<enter> to continue"
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[connection signal="input_event" from="window/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="window/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="window/Area2D" to="." method="_on_area_2d_mouse_exited"]
